[project]
name = "example-pyproject"
version = "0.0.1a1"
description = "Example python project for experience."
readme = "README.md"
license = "MIT"
license-file = ["LICENSE.txt"]
authors = [
    {name = "Kas Knicely", email = "jknicely@alaska.edu"}
]
maintainer = [
    {name = "", email = ""}
]
requires-python = ">=3.12"
because = "why?"

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]
